<resources>
    <string name="app_name">fyp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_user_register">user_register</string>
    <string name="to_location_title">To</string>
    <string name="from_location_title">From</string>
    <string name="to_location">To: %s</string>
    <string name="from_location">From: %s</string>
    <string name="ticket_id">Bus ID</string>
    <string name="bus_plate_no">Bus Plate No</string>
    <string name="departure_time">Departure Time</string>
    <string name="departure_date">Departure Date</string>
    <string name="arrived_time">Arrive Time</string>
    <string name="arrived_date">Arrive Date</string>
    <string name="company_name">Company Name</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="ticket_stage">Stage</string>
    <string name="own_ticket_list">Own Ticket List</string>
    <string name="ticket_history">Ticket History</string>
    <string name="admin_ticket_history">All Ticket History</string>


    <string name="dialog_delete_ticket">Ticket is deleted</string>
    <string name="dialog_delete_ask_title">Delete Ticket?</string>
    <string name="dialog_delete_ask_user">Are you sure to delete this ticket?</string>

</resources>