<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clickable="true">

    <include
        android:id="@+id/included_toolbar"
        layout="@layout/toolbar_view"
        app:layout_constraintBottom_toTopOf="@+id/sv_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom"
        app:layout_constraintTop_toBottomOf="@+id/included_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- car details -->
            <LinearLayout
                android:id="@+id/ll_car_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:background="@color/colorWhite"
                android:elevation="@dimen/card_elevation_small"
                android:orientation="vertical"
                android:padding="@dimen/common_padding_large"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_car_diary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/common_margin_large"
                    android:text="Ticket Details"
                    android:textColor="@color/colorBlue3"
                    android:textSize="@dimen/common_font_mid_large" />

                <!-- car model -->
                <TextView
                    android:id="@+id/tv_ticket_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ticket_id"
                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginEnd="@dimen/common_margin"

                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/common_font_medium" />

                <EditText
                    android:id="@+id/edt_ticket_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:layout_marginBottom="@dimen/common_margin"
                    android:background="@drawable/common_input_box"
                    android:inputType="text"
                    android:padding="@dimen/common_padding"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/common_font_mid_large" />
                <!-- end car model -->

                <!-- car plate -->
                <TextView
                    android:id="@+id/tv_bus_plate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin_large"
                    android:text="@string/bus_plate_no"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginEnd="@dimen/common_margin"
                    android:textSize="@dimen/common_font_medium" />

                <EditText
                    android:id="@+id/edt_car_plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:layout_marginBottom="@dimen/common_margin"
                    android:background="@drawable/common_input_box"
                    android:inputType="text"
                    android:padding="@dimen/common_padding"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/common_font_mid_large" />
                <!-- end car plate -->

                <!-- color -->
                <TextView
                    android:id="@+id/tv_from_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin_large"
                    android:text="@string/to_location"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginEnd="@dimen/common_margin"
                    android:textSize="@dimen/common_font_medium" />

                <EditText
                    android:id="@+id/edt_from_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:layout_marginBottom="@dimen/common_margin"
                    android:background="@drawable/common_input_box"
                    android:inputType="text"
                    android:padding="@dimen/common_padding"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/common_font_mid_large" />
                <!-- end color -->
<!-- departure date-->

                <TextView
                    android:id="@+id/tv_ticket_departure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin_large"
                    android:text="@string/departure_time"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginEnd="@dimen/common_margin"
                    android:textSize="@dimen/common_font_medium" />

                <EditText
                    android:id="@+id/edit_departure_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:background="@drawable/common_input_box"
                    android:inputType="text"
                    android:padding="@dimen/common_padding"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/common_font_mid_large" />


                <TextView
                    android:id="@+id/tv_departure_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departure_date"
                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginEnd="@dimen/common_margin"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/common_font_medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:layout_marginBottom="@dimen/common_margin"
                    android:background="@drawable/common_input_box"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_departure_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_transparent_ripple_corner_radius"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/edt_departure_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:background="@null"
                            android:padding="@dimen/common_padding"
                            android:textColor="@color/colorTextBlack"
                            android:textColorHint="@color/colorMainGrey"
                            android:textSize="@dimen/common_font_mid_large" />

                        <ImageView
                            android:layout_width="@dimen/edittext_icon_width"
                            android:layout_height="@dimen/edittext_icon_height"
                            android:layout_marginLeft="@dimen/common_margin"
                            android:layout_marginRight="@dimen/common_margin_large"
                            android:src="@drawable/ic_calendar"
                            app:tint="@color/colorPrimary" />
                    </LinearLayout>
                </LinearLayout>
<!--end departure date-->

<!--                arrvied date-->
                <TextView
                    android:id="@+id/tv_arrived_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin_large"

                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginEnd="@dimen/common_margin"
                    android:text="@string/arrived_time"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/common_font_medium" />
                <EditText
                    android:id="@+id/et_arrived_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:background="@drawable/common_input_box"
                    android:inputType="text"
                    android:padding="@dimen/common_padding"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/common_font_mid_large" />

                <TextView
                    android:id="@+id/tv_arrived_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrived_date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/common_font_medium"
                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginEnd="@dimen/common_margin"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:layout_marginBottom="@dimen/common_margin"
                    android:background="@drawable/common_input_box"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_arrived_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_transparent_ripple_corner_radius"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/edt_arrived_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:background="@null"
                            android:padding="@dimen/common_padding"
                            android:textColor="@color/colorTextBlack"
                            android:textColorHint="@color/colorMainGrey"
                            android:textSize="@dimen/common_font_mid_large" />

                        <ImageView
                            android:layout_width="@dimen/edittext_icon_width"
                            android:layout_height="@dimen/edittext_icon_height"
                            android:layout_marginLeft="@dimen/common_margin"
                            android:layout_marginRight="@dimen/common_margin_large"
                            android:src="@drawable/ic_calendar"
                            app:tint="@color/colorPrimary" />
                    </LinearLayout>
                </LinearLayout>

<!--arrived date?-->

                <TextView
                    android:id="@+id/tv_ticket_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginTop="@dimen/common_margin_large"
                    android:layout_marginEnd="@dimen/common_margin"
                    android:text="@string/ticket_price"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/common_font_medium" />

                <EditText
                    android:id="@+id/edt_ticket_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:background="@drawable/common_input_box"
                    android:inputType="text"
                    android:padding="@dimen/common_padding"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/common_font_mid_large" />

                <TextView
                    android:id="@+id/tv_ticket_stage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginTop="@dimen/common_margin_large"
                    android:layout_marginEnd="@dimen/common_margin"
                    android:text="@string/ticket_stage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/common_font_medium" />

                <EditText
                    android:id="@+id/edt_ticket_stage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:background="@drawable/common_input_box"
                    android:inputType="text"
                    android:padding="@dimen/common_padding"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/common_font_mid_large" />


                <TextView
                    android:id="@+id/tv_company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginTop="@dimen/common_margin_large"
                    android:layout_marginEnd="@dimen/common_margin"
                    android:text="@string/company_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/common_font_medium" />

                <EditText
                    android:id="@+id/edt_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:background="@drawable/common_input_box"
                    android:inputType="text"
                    android:padding="@dimen/common_padding"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/common_font_mid_large" />

            </LinearLayout>
            <!-- end car details -->

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_top_grey"
        android:orientation="vertical"
        android:paddingStart="@dimen/common_padding_content"
        android:paddingTop="@dimen/common_padding"
        android:paddingEnd="@dimen/common_padding_content"
        android:paddingBottom="@dimen/common_padding"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:padding="@dimen/common_padding"
            android:text="Save"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/common_font_large"
            app:cornerRadius="@dimen/common_corner_radius" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>